// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Custom dimensions 1`] = `
<div
  className="button"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(85, 172, 241)",
      "backgroundImage": "none",
      "borderRadius": "20px",
      "boxShadow": "none",
      "color": "rgb(255, 255, 255)",
      "height": "300px",
      "width": "300px",
    }
  }
>
  I can be any size and the text is centered and multiline
</div>
`;

exports[`Storyshots Button Custom gradient 1`] = `
<div
  className="button shadow regular"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(129, 36, 122)",
      "backgroundImage": "linear-gradient(to right, #81247A, #303993)",
      "borderRadius": "20px",
      "boxShadow": "0px 4px 0px hsl(304.5, 56.4%, 24.3%)",
      "color": "rgb(255, 255, 255)",
    }
  }
>
  Custom gradient
</div>
`;

exports[`Storyshots Button Dispay block 1`] = `
<div
  className="button block"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(85, 172, 241)",
      "backgroundImage": "none",
      "borderRadius": "20px",
      "boxShadow": "none",
      "color": "rgb(255, 255, 255)",
    }
  }
>
  I display block
</div>
`;

exports[`Storyshots Button Plain button 1`] = `
<div
  className="button regular"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(85, 172, 241)",
      "backgroundImage": "none",
      "borderRadius": "20px",
      "boxShadow": "none",
      "color": "rgb(255, 255, 255)",
    }
  }
>
  A simple button
</div>
`;

exports[`Storyshots Button Round with icon 1`] = `
<div
  className="button shadow round regular"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(129, 36, 122)",
      "backgroundImage": "none",
      "borderRadius": "50%",
      "boxShadow": "0px 4px 0px hsl(304.5, 56.4%, 24.3%)",
      "color": "rgb(255, 255, 255)",
    }
  }
>
  <i
    className="icon-pencil"
    style={
      Object {
        "color": "inherit",
        "fontSize": "inherit",
        "verticalAlign": "middle",
      }
    }
  />
</div>
`;

exports[`Storyshots Button With shadow and gradient 1`] = `
<div
  className="button shadow regular"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(85, 172, 241)",
      "backgroundImage": "linear-gradient(to right, #55acf1, hsl(206.5, 84.8%, 76.7%))",
      "borderRadius": "20px",
      "boxShadow": "0px 4px 0px hsl(206.5, 84.8%, 47.9%)",
      "color": "rgb(255, 255, 255)",
    }
  }
>
  With shadow & gradient
</div>
`;

exports[`Storyshots Footer Footer 1`] = `
<div
  className="host"
  data-jsx-ext="24178985361"
>
  <div
    className="links"
    data-jsx-ext="24178985361"
  >
    <div
      className="column"
      data-jsx-ext="24178985361"
    >
      <a
        data-jsx-ext="24178985361"
        href="/"
      >
        Home
      </a>
      <a
        data-jsx-ext="24178985361"
        href="/learn-more"
      >
        Learn More
      </a>
      <a
        data-jsx-ext="24178985361"
        href="/curriculum"
      >
        Curriculum
      </a>
    </div>
    <div
      className="column"
      data-jsx-ext="24178985361"
    >
      <a
        data-jsx-ext="24178985361"
        href="/edu/lesson-hive"
      >
        Lesson Hive
      </a>
      <a
        data-jsx-ext="24178985361"
        href="/edu/night-times"
      >
        Student Showcase
      </a>
      <a
        data-jsx-ext="24178985361"
        href="http://nightzooteacher.com"
      >
        Blog
      </a>
    </div>
    <div
      className="column"
      data-jsx-ext="24178985361"
    >
      <a
        data-jsx-ext="24178985361"
        href="/contact"
      >
        Contact
      </a>
      <a
        data-jsx-ext="24178985361"
        href="/terms-and-conditions"
      >
        Terms & Conditions
      </a>
      <a
        data-jsx-ext="24178985361"
        href="/privacy"
      >
        Privacy Policy
      </a>
    </div>
    <div
      className="socials"
      data-jsx-ext="24178985361"
    >
      <a
        data-jsx-ext="24178985361"
        href="https://twitter.com/nightzookeeper"
        target="_blank"
      >
        <i
          data-jsx-ext="24178985361"
        >
          <svg
            data-jsx-ext="24178985361"
            style={
              Object {
                "fill": "grey",
                "height": "24px",
                "verticalAlign": "middle",
                "width": "24px",
              }
            }
            viewBox="0 0 512 512"
          >
            <g
              data-jsx-ext="24178985361"
            >
              <path
                d="m498 107c-18 8-37 13-57 15 21-12 36-31 44-55-19 12-41 20-63 24-18-19-44-31-73-31-54 0-99 45-99 99 0 8 1 16 3 23-83-4-156-44-204-104-9 15-14 32-14 50 0 35 18 65 44 83-16-1-31-5-45-13 0 1 0 1 0 1 0 48 34 89 80 98-8 2-17 3-26 3-7 0-13 0-19-2 13 40 49 68 93 69-34 27-77 43-123 43-8 0-16-1-24-2 44 28 96 45 152 45 182 0 282-151 282-282 0-5 0-9 0-13 19-14 36-31 49-51z"
                data-jsx-ext="24178985361"
              />
            </g>
          </svg>
        </i>
      </a>
      <a
        data-jsx-ext="24178985361"
        href="https://www.facebook.com/nightzookeeper"
        target="_blank"
      >
        <i
          class="L6JCB"
          data-jsx-ext="24178985361"
        >
          <svg
            data-jsx-ext="24178985361"
            style={
              Object {
                "fill": "grey",
                "height": "24px",
                "verticalAlign": "middle",
                "width": "24px",
              }
            }
            viewBox="0 0 512 512"
          >
            <g
              data-jsx-ext="24178985361"
            >
              <path
                d="m448 28l-385 0c-19 0-35 16-35 35l0 385c0 20 16 36 35 36l385 0c20 0 36-16 36-36l0-385c0-19-16-35-36-35z m-166 433l0-168-56 0 0-42 56 0 0-60c0-24 7-43 20-56 13-12 31-19 53-19 15 0 29 1 39 2l0 36-24 0c-43 0-44 33-44 44l0 53 64 0-6 42-58 0 0 168z"
                data-jsx-ext="24178985361"
              />
            </g>
          </svg>
        </i>
      </a>
    </div>
  </div>
  <div
    className="wonky-star"
    data-jsx-ext="24178985361"
  >
    <div
      className="wonky-star-logo"
      data-jsx-ext="24178985361"
    >
      <img
        alt="Wonkey Star Logo"
        data-jsx-ext="24178985361"
        src="https://dogottrtuoo78.cloudfront.net/assets/be3a8859.png"
      />
    </div>
    <div
      className="wonky-star-label"
      data-jsx-ext="24178985361"
    >
      <div
        data-jsx-ext="24178985361"
      >
        2011-2017. Wonky Star Ltd
      </div>
      <div
        data-jsx-ext="24178985361"
      >
        Registered Company No. 07706300
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon Icon 1`] = `
<i
  className="icon-night-zookeeper-logo"
  style={
    Object {
      "color": "#000",
      "fontSize": "28px",
      "verticalAlign": "middle",
    }
  }
/>
`;

exports[`Storyshots ShareDropDown Dropdown 1`] = `
<div
  className="host"
  data-jsx-ext="24108245120"
  style={
    Object {
      "backgroundColor": "#eee",
      "color": "#555",
    }
  }
>
  <div
    className="drop attached-top"
    data-jsx-ext="24108245120"
  >
    <div
      className="arrow attached-top"
      data-jsx-ext="24108245120"
      style={
        Object {
          "borderBottom": "25px solid #eee",
          "right": "-20px",
        }
      }
    />
    <div
      className="drop-content"
      data-jsx-ext="24108245120"
    >
      <h4
        data-jsx-ext="24108245120"
      >
        Share this with
      </h4>
      <ul
        data-jsx-ext="24108245120"
      >
        <li
          data-jsx-ext="24108245120"
        >
          <a
            data-jsx-ext="24108245120"
            href="http://www.facebook.com/sharer/sharer.php?u=https://www.nightzookeeper.com"
            target="_blank"
          >
            <i
              className="icon-facebook"
              style={
                Object {
                  "color": "#323091",
                  "fontSize": "inherit",
                  "verticalAlign": "middle",
                }
              }
            />
             Facebook
          </a>
        </li>
        <li
          data-jsx-ext="24108245120"
        >
          <a
            data-jsx-ext="24108245120"
            href="http://twitter.com/share?url=https://www.nightzookeeper.com;via=nightzookeeper"
            target="_blank"
          >
            <i
              className="icon-twitter"
              style={
                Object {
                  "color": "#3BABE6",
                  "fontSize": "inherit",
                  "verticalAlign": "middle",
                }
              }
            />
             Twitter
          </a>
        </li>
      </ul>
      <p
        data-jsx-ext="24108245120"
      >
        Copy this link
        <input
          data-jsx-ext="24108245120"
          onFocus={[Function]}
          type="text"
          value="https://www.nightzookeeper.com"
        />
      </p>
      <h4
        data-jsx-ext="24108245120"
      >
        Follow us on
      </h4>
      <a
        data-jsx-ext="24108245120"
        href="http://facebook.com/nightzookeeper"
        target="_blank"
      >
        <i
          className="icon-facebook"
          style={
            Object {
              "color": "#323091",
              "fontSize": "inherit",
              "verticalAlign": "middle",
            }
          }
        />
      </a>
      <a
        data-jsx-ext="24108245120"
        href="https://twitter.com/nightzookeeper"
        target="_blank"
      >
        <i
          className="icon-twitter"
          style={
            Object {
              "color": "#3BABE6",
              "fontSize": "inherit",
              "verticalAlign": "middle",
            }
          }
        />
      </a>
      <a
        data-jsx-ext="24108245120"
        href="https://www.pinterest.com/nightzookeeper/"
        target="_blank"
      >
        <i
          className="icon-pinterest"
          style={
            Object {
              "color": "#B60225",
              "fontSize": "inherit",
              "verticalAlign": "middle",
            }
          }
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots WritingTool Field 1`] = `
<div>
  <li
    style={
      Object {
        "margin": "4px",
        "width": "33%",
      }
    }
  >
    <div
      className="input"
      data-jsx-ext="21835364613"
      name="field"
    >
      <input
        className="input"
        data-jsx-ext="21835364613"
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0.04)",
            "color": "white",
            "fontSize": "16px",
            "height": "35px",
          }
        }
        type="text"
        value={undefined}
      />
      <div
        className="removeButton light"
        data-jsx-ext="21835364613"
        onClick={[Function]}
      >
        <div
          className="icon"
          data-jsx-ext="21835364613"
        >
          <i
            className="icon-cross"
            style={
              Object {
                "color": "inherit",
                "fontSize": "12px",
                "verticalAlign": "middle",
              }
            }
          />
        </div>
      </div>
    </div>
  </li>
  <div
    className="input"
    data-jsx-ext="21835364613"
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.04)",
        "color": "white",
        "fontSize": "16px",
        "height": "35px",
      }
    }
    type="text"
  >
    <div
      className="removeButton light"
      data-jsx-ext="21835364613"
      onClick={undefined}
    />
  </div>
  <button
    className="input block button"
    data-jsx-ext="21835364613"
    onClick={undefined}
    style={
      Object {
        "backgroundColor": "hsla(0,0,10%,0.04)",
        "color": "white",
        "fontSize": "16px",
        "height": "35px",
      }
    }
  >
    +
  </button>
</div>
`;

exports[`Storyshots WritingTool ProgressBar 1`] = `
<div
  className="host"
  data-jsx-ext="2950151016"
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    className="full-bar"
    data-jsx-ext="2950151016"
    style={
      Object {
        "backgroundColor": "#34D9E0",
      }
    }
  >
    <div
      className="progress"
      data-jsx-ext="2950151016"
      style={
        Object {
          "backgroundColor": "#3CB6BA",
          "width": "undefined%",
        }
      }
    />
    <div
      className="counter"
      data-jsx-ext="2950151016"
    >
      0
    </div>
    <div
      className="bar min"
      data-jsx-ext="2950151016"
    />
    <div
      className="limit"
      data-jsx-ext="2950151016"
      style={Object {}}
    >
      0
    </div>
  </div>
</div>
`;

exports[`Storyshots WritingTool Wordcount 1`] = `
<div
  className="host"
  data-jsx-ext="2411121501"
  style={
    Object {
      "borderBottomColor": "green",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "2px",
      "textAlign": "center",
      "width": "65px",
    }
  }
>
  0
   / 
  0
</div>
`;
